--- a/configs/prw_unsupervised.yaml
+++ b/configs/prw_unsupervised.yaml
@@ -2,7 +2,7 @@ OUTPUT_DIR: "./exp_prw"
 INPUT:
   DATASET: "PRWUnsupervised"
   DATA_ROOT: "data/PRW"
-  BATCH_SIZE_TRAIN: 10
+  BATCH_SIZE_TRAIN: 8
 SOLVER:
   MAX_EPOCHS: 50
   LR_DECAY_MILESTONES: [8]
@@ -10,3 +10,5 @@ MODEL:
   LOSS:
     LUT_SIZE: 482
     CQ_SIZE: 500
+    OIM_SCALAR: 20.0
+  
